--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <div class="game-container">
         <div class="score-display">Score: <span id="score">0</span></div>
         <div id="game-grid"></div>
+        <div class="mobile-controls">
+            <div class="controls-row">
+                <button class="control-btn" id="up-btn">⬆️</button>
+            </div>
+            <div class="controls-row">
+                <button class="control-btn" id="left-btn">⬅️</button>
+                <button class="control-btn" id="down-btn">⬇️</button>
+                <button class="control-btn" id="right-btn">➡️</button>
+            </div>
+        </div>
         <div id="game-over-modal" class="modal hidden">
             <div class="modal-content">
                 <h2>Game Over!</h2>
